--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "WIP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/z3t0/vehicle-info-api/issues"
   },
-  "homepage": "https://github.com/z3t0/vehicle-info-api#readme"
+  "homepage": "https://github.com/z3t0/vehicle-info-api#readme",
+  "devDependencies": {
+    "typescript": "^4.6.2"
+  }
 }
