--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/z3t0/vehicle-info-api#readme",
   "devDependencies": {
+    "@types/koa": "^2.13.4",
+    "@types/koa-json": "^2.0.20",
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@types/koa": "^2.13.4",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "koa-json": "^2.0.2"
   }
 }
