--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node build/index.js"
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "yarn typecheck -w",
+    "start": "node build/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -19,8 +23,14 @@
   },
   "homepage": "https://github.com/z3t0/vehicle-info-api#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "@types/koa": "^2.13.4",
     "@types/koa-json": "^2.0.20",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
     "typescript": "^4.6.2"
   },
   "dependencies": {
